# Ai-Pet

./: .env.example  .gitignore  01_AI宠_可行性研究与家庭部署方案.md  AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: activate-wxautox4.ps1  apply-coco-persona.ps1  approve-openclaw-feishu-pairing.ps1  approve-openclaw-weixin-pairing.ps1  assert-aipet-wechat-e2e.ps1  audit-ai-pet-wechat-full-readiness.ps1  configure-aipet-wechat-family.ps1  configure-openclaw-family-chat.ps1  configure-openclaw-feishu-family-chat.ps1  configure-wxauto-openclaw-channel.ps1  doctor-ai-pet-wechat-full.ps1  emergency-stop-aipet-wechat.ps1  export-aipet-wechat-diagnostics.ps1  list-openclaw-feishu-pairings.ps1  list-openclaw-weixin-pairings.ps1  login-openclaw-feishu.ps1  login-openclaw-weixin.ps1  openclaw-env.ps1  openclaw-feishu-status.ps1  openclaw-weixin-status.ps1  preflight-ai-pet-wechat-full.ps1  repair-and-verify-ai-pet-wechat-full-desktop.cmd  repair-and-verify-ai-pet-wechat-full.cmd  repair-and-verify-ai-pet-wechat-full.ps1  repair-bridge-wechat-settings.ps1  restart-ai-pet-wechat-full.cmd  restore-aipet-wechat-settings.ps1  run-bridge.cmd  run-bridge.ps1  run-openclaw-gateway.ps1  save-wxautox4-license.ps1  set-wxautox-home-mode.ps1  setup-ai-pet-wechat-full.ps1  setup-dev.ps1  setup-openclaw-feishu.ps1  setup-openclaw-weixin.ps1  setup-wxauto-openclaw-channel.ps1  show-aipet-wechat-trace.ps1  sidecar-status.ps1  start-ai-pet-wechat-full.cmd  (+16 more)
src/aipet_bridge/: __init__.py  app.py  audit_log.py  cli.py  config.py  models.py  openclaw.py  persona.py  persona_presets.py  service.py  storage.py  wechat.py
src/aipet_bridge/static/: index.html
src/aipet_wechat_sidecar/: __init__.py  cli.py
src/aipet_wxauto_bridge_channel/: __init__.py  channel.py  cli.py
tests/: test_openclaw_client.py  test_storage.py  test_verify_script.py  test_wxauto_bridge_channel.py  test_wxauto_cli.py  test_wxauto_scripts.py
