[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pet"
version = "0.1.0"
description = "AI Pet Bridge service for local pet state, persona, WeChat controls, logs, and agent tool APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]
wechat = [
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
  "websockets>=12.0",
  "uiautomation>=2.0.20",
]

[project.scripts]
aipet-bridge = "aipet_bridge.cli:main"
aipet-wechat-sidecar = "aipet_wechat_sidecar.cli:main"
aipet-wxauto-bridge-channel = "aipet_wxauto_bridge_channel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aipet_bridge = ["static/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
